--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shriwarthan</title>
+    <title>Shriwarthan Vigneshwaran</title>
+    <link rel="icon" type="image/x-icon" href="/src/assets/images/me1.png" />
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
